test/kubernetes/e2e/features/waypoint/testdata/weighted/balance-httproute-noname-services.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: balance-noname-http-route
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: balance-noname
    port: 8080
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: svc-a-noname
      kind: Service
      port: 8080
      weight: 50
    - name: svc-b-noname
      kind: Service
      port: 8080
      weight: 50
