test/kubernetes/e2e/features/waypoint/testdata/weighted/balance-service-with-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: balance
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
