test/kubernetes/e2e/features/waypoint/testdata/weighted/service-a-noname.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-a-noname
spec:
  ports:
    - port: 8080 
      targetPort: 5678
  selector:
    app: svc-a
